--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,8 @@
     <title>Smart2O</title>
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script src="main.js" type="module"></script>
+    <link rel="stylesheet" href="main.css">
+    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
   </head>
   <body>
     <div id="app">
