--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,11 @@
   <head>
     <title>Smart2O</title>
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+    <script src="https://unpkg.com/vue-router/dist/vue-router.js"></script>
     <script src="main.js" type="module"></script>
+    <link rel="stylesheet" href="main.css">
   </head>
   <body>
-    <div id="app">
-
-    </div>
+    <div id="app"></div>
   </body>
 </html>
